--- a/themes/apollo/source/css/_bass/bass.styl
+++ b/themes/apollo/source/css/_bass/bass.styl
@@ -43,6 +43,9 @@ h1, h2, h3, h4, h5, h6
   color: color-title
   font-weight: bold
   a
+    font-weight: normal
+
+h1 a
     color: color-title
     text-decoration: none
     &:hover
